Add gitignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,20 @@ rocket/lib/ruby_ship/bin/shipyard/linux_ruby/share/ri/2.1.0/system/MiniTest/Unit
 rocket/lib/ruby_ship/bin/shipyard/linux_ruby/share/ri/2.1.0/system/MiniTest/cdesc-MiniTest.ri
 rocket/lib/ruby_ship/bin/shipyard/linux_ruby/share/ri/2.1.0/system/REXML/Parsers/XPathParser/Predicate-i.ri
 rocket/lib/ruby_ship/bin/shipyard/linux_ruby/share/ri/2.1.0/system/RSS/DublinCoreModel/cdesc-DublinCoreModel.ri
+mapping_files/sd_definitions.csv
+result
+rocket/.idea/vcs.xml
+rocket/Functions/__pycache__/
+rocket/__pycache__/
+rocket/data_handlers/__pycache__/
+rocket/data_table_test.csv
+rocket/mapping_managers/__pycache__/
+rocket/template_kit/__pycache__/
+rocket/utils/__pycache__/
+rocket/utils/coinsExport_FEQ_041617.csv.tsv
+rocket/utils/sd_definitions.csv
+source_datafiles/coinsExport_FEQ_041617.csv.tsv
+/source_datafiles/
+/mapping_files/
+/sink_datafiles/
+/rocket/.idea/
