Ignored many files for deployment version

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,29 @@ rocket/utils/coinsExport_FEQ_041617.csv.tsv
 rocket/utils/sd_definitions.csv
 source_datafiles/coinsExport_FEQ_041617.csv.tsv
 /source_datafiles/
-/mapping_files/
 /sink_datafiles/
 /rocket/.idea/
+
+eatq1_Dec_20_17_14_wtp2ndar\.csv
+
+igt1_Dec_20_17_13_cotwin_coins2ndar\.csv
+
+rocket/utils/yadisc01_definition\.csv
+
+update_template_wtp2ndar\.bat
+
+update_template_coins2ndar\.bat
+
+make_template_wtp2ndar\.bat
+
+make_template\.bat
+
+convert_template_wtp2ndar\.bat
+
+convert_template\.bat
+
+rocket/workspace_path_config\.json
+
+\.idea/
+
+mapping_files/
